# wasm_game_of_life

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  deploy.yaml
src/: lib.rs
tests/: universe.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
