[package]
name = "wasm-gol"
version = "0.1.0"
edition = "2021"

[lib]
# For WASM stuff
crate-type = ["cdylib", "rlib"]

[dependencies]
fixedbitset = "0.4.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
